--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "isbot": "^3.6.5",
     "isomorphic-dompurify": "^0.24.0",
     "mysql2": "^2.3.3",
+    "node-cache": "^5.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
