--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mysql2": "^2.3.3",
     "node-cache": "^5.1.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.9.0",
